--- a/www/index.html
+++ b/www/index.html
@@ -140,11 +140,13 @@
 <script src="js/highfivejs/screen/ResizeHandler.js"></script>
 <script src="js/highfivejs/screen/SimpleLoadingScreen.js"></script>
 <script src="js/highfivejs/screen/OrientationHandler.js"></script>
+<script src="js/highfivejs/screen/VisibilityHandler.js"></script>
 <script src="js/highfivejs/screen/FullScreenHandler.js"></script>
 <script src="js/highfivejs/net/ResourceLoader.js"></script>
 <script src="js/highfivejs/platform/bootstrap/installCanvas.js"></script>
 <script src="js/highfivejs/screen/bootstrap/installResize.js"></script>
 <script src="js/highfivejs/screen/bootstrap/installOrientation.js"></script>
+<script src="js/highfivejs/screen/bootstrap/installVisibility.js"></script>
 <script src="js/highfivejs/screen/bootstrap/installFullScreen.js"></script>
 <script src="js/highfivejs/input/bootstrap/installPointer.js"></script>
 <script src="js/highfivejs/input/bootstrap/installKeyBoard.js"></script>
