local storage wrapper refs #69 #core (cherry picked from commit 2b2e371)

--- a/www/index.html
+++ b/www/index.html
@@ -58,6 +58,7 @@
 <script src="js/highfivejs/platform/UniversalTranslator.js"></script>
 <script src="js/highfivejs/platform/addFontToDOM.js"></script>
 <script src="js/highfivejs/platform/requestAnimFrame.js"></script>
+<script src="js/highfivejs/platform/lclStorage.js"></script>
 <script src="js/highfivejs/platform/DeviceInfo.js"></script>
 <script src="js/highfivejs/screen/FullScreenController.js"></script>
 <script src="js/highfivejs/screen/OrientationLock.js"></script>
