load & safe objects with local storage refs #69 #core (cherry picked from commit b192ce6)

--- a/www/index.html
+++ b/www/index.html
@@ -62,6 +62,8 @@
 <script src="js/highfivejs/platform/storage/loadBoolean.js"></script>
 <script src="js/highfivejs/platform/storage/loadInteger.js"></script>
 <script src="js/highfivejs/platform/storage/loadString.js"></script>
+<script src="js/highfivejs/platform/storage/loadObject.js"></script>
+<script src="js/highfivejs/platform/storage/saveObject.js"></script>
 <script src="js/highfivejs/platform/DeviceInfo.js"></script>
 <script src="js/highfivejs/screen/FullScreenController.js"></script>
 <script src="js/highfivejs/screen/OrientationLock.js"></script>
