--- a/www/index.html
+++ b/www/index.html
@@ -136,6 +136,11 @@
 <script src="js/highfivejs/utils/range.js"></script>
 <script src="js/highfivejs/scene/component/ButtonFactory.js"></script>
 <script src="js/highfivejs/scene/SceneManager.js"></script>
+
+<!--my scenes start-->
+
+<!--my scenes end-->
+
 <script src="js/myscenes/installMyScenes.js"></script>
 <script src="js/highfivejs/app/GameLoop.js"></script>
 <script src="js/highfivejs/app/bootstrap/installLoop.js"></script>
