--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Crappy Space Miner</title>
+    <title>highfive.js app</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.json">
@@ -89,6 +89,7 @@
 <script src="js/highfivejs/render/intern/draw/entity/TextWrapper.js"></script>
 <script src="js/highfivejs/render/intern/draw/entity/Rectangle.js"></script>
 <script src="js/highfivejs/render/intern/draw/entity/Circle.js"></script>
+<script src="js/highfivejs/render/intern/draw/entity/EquilateralTriangle.js"></script>
 <script src="js/highfivejs/render/intern/draw/entity/DrawableLine.js"></script>
 <script src="js/highfivejs/render/intern/draw/entity/Drawable.js"></script>
 <script src="js/highfivejs/render/intern/draw/entity/Drawables.js"></script>
@@ -115,6 +116,7 @@
 
 <script src="js/highfivejs/render/intern/draw/wrapText.js"></script>
 <script src="js/highfivejs/render/intern/draw/renderPolygon.js"></script>
+<script src="js/highfivejs/render/intern/draw/renderEqTriangle.js"></script>
 <script src="js/highfivejs/render/intern/draw/renderImage.js"></script>
 <script src="js/highfivejs/render/intern/draw/renderAtlas.js"></script>
 <script src="js/highfivejs/render/intern/draw/renderText.js"></script>
