basic analytics stuff #core (cherry picked from commit fddafd1)

--- a/www/index.html
+++ b/www/index.html
@@ -141,6 +141,9 @@
 <script src="js/highfivejs/scene/component/ButtonFactory.js"></script>
 <script src="js/highfivejs/scene/SceneManager.js"></script>
 
+<script src="js/highfivejs/analytics/HolmesConnector.js"></script>
+<script src="js/highfivejs/analytics/bootstrap/installHolmes.js"></script>
+
 <!--my scenes start-->
 
 <!--my scenes end-->
