system status analytics event #core (cherry picked from commit 34deb7e)

--- a/www/index.html
+++ b/www/index.html
@@ -144,6 +144,8 @@
 <script src="js/highfivejs/analytics/HolmesConnector.js"></script>
 <script src="js/highfivejs/analytics/bootstrap/installHolmes.js"></script>
 
+<script src="js/highfivejs/analyticsutils/sendSystemEvent.js"></script>
+
 <!--my scenes start-->
 
 <!--my scenes end-->
