--- a/www/index.html
+++ b/www/index.html
@@ -139,6 +139,7 @@
 <script src="js/highfivejs/screen/Orientation.js"></script>
 <script src="js/highfivejs/utils/range.js"></script>
 <script src="js/highfivejs/scene/component/ButtonFactory.js"></script>
+<script src="js/highfivejs/scene/MVVMScene.js"></script>
 <script src="js/highfivejs/scene/SceneManager.js"></script>
 
 <script src="js/highfivejs/analytics/HolmesConnector.js"></script>
