first final draft of new stage api #core (cherry picked from commit 122a41e)

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
 <script src="js/highfivejs/render/intern/motion/entity/BezierCurvePath.js"></script>
 
 <script src="js/highfivejs/utils/Repository.js"></script>
+<script src="js/highfivejs/utils/KeyRepository.js"></script>
 <script src="js/highfivejs/resizeutils/changePath.js"></script>
 <script src="js/highfivejs/resizeutils/changeCoords.js"></script>
 <script src="js/highfivejs/resizeutils/changeTouchable.js"></script>
@@ -132,6 +133,11 @@
 
 <script src="js/highfivejs/render/Stage.js"></script>
 <script src="js/highfivejs/render/ResizableStage.js"></script>
+
+<script src="js/highfivejs/render/intern/draw/entity/Setter.js"></script>
+<script src="js/highfivejs/render/intern/EntityServices.js"></script>
+<script src="js/highfivejs/render/NewStageAPI.js"></script>
+
 <script src="js/highfivejs/render/ImageCache.js"></script>
 <script src="js/highfivejs/render/AtlasCache.js"></script>
 
