--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
 <script src="js/highfivejs/utils/getFunctionName.js"></script>
 <script src="js/highfivejs/utils/Vectors.js"></script>
 <script src="js/highfivejs/utils/Strings.js"></script>
+<script src="js/highfivejs/utils/CallbackCounter.js"></script>
 <script src="js/highfivejs/platform/Stats.js"></script>
 <script src="js/highfivejs/screen/getDevicePixelRatio.js"></script>
 <script src="js/highfivejs/app/Event.js"></script>
