missing dependency to start up #core (cherry picked from commit ea8e8ba)

--- a/www/index.html
+++ b/www/index.html
@@ -168,6 +168,7 @@
 
 <!--my scenes start-->
 
+<script src="js/mygame/scenes/installMyScenes.js"></script>
 <!--my scenes end-->
 
 <script src="js/highfivejs/app/GameLoop.js"></script>
