eq triangle classes #core (cherry picked from commit 883139f)

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
 <script src="js/highfivejs/utils/concatenateProperties.js"></script>
 <script src="js/highfivejs/utils/getFunctionName.js"></script>
 <script src="js/highfivejs/utils/Vectors.js"></script>
+<script src="js/highfivejs/utils/EqTriangles.js"></script>
 <script src="js/highfivejs/utils/Strings.js"></script>
 <script src="js/highfivejs/utils/CallbackCounter.js"></script>
 <script src="js/highfivejs/platform/Stats.js"></script>
@@ -161,6 +162,9 @@
 <script src="js/highfivejs/game/Grid.js"></script>
 <script src="js/highfivejs/game/GridHelper.js"></script>
 <script src="js/highfivejs/game/GridViewHelper.js"></script>
+<script src="js/highfivejs/game/EqTriangleGrid.js"></script>
+<script src="js/highfivejs/game/EqTriangleGridHelper.js"></script>
+<script src="js/highfivejs/game/EqTriangleViewHelper.js"></script>
 <script src="js/highfivejs/utils/calcCantorPairing.js"></script>
 <script src="js/highfivejs/utils/checkAndSet30fps.js"></script>
 <script src="js/highfivejs/utils/ValueChecker.js"></script>
