--- a/www/index.html
+++ b/www/index.html
@@ -96,6 +96,7 @@
 <script src="js/highfivejs/render/intern/draw/entity/ABLine.js"></script>
 <script src="js/highfivejs/render/intern/draw/entity/Circle.js"></script>
 <script src="js/highfivejs/render/intern/draw/entity/EquilateralTriangle.js"></script>
+<script src="js/highfivejs/render/intern/draw/entity/Hexagon.js"></script>
 <script src="js/highfivejs/render/intern/draw/entity/DrawableLine.js"></script>
 <script src="js/highfivejs/render/intern/draw/entity/Drawable.js"></script>
 <script src="js/highfivejs/render/intern/draw/entity/Drawables.js"></script>
@@ -164,6 +165,7 @@
 <script src="js/highfivejs/game/EqTriangleGrid.js"></script>
 <script src="js/highfivejs/game/EqTriangleGridHelper.js"></script>
 <script src="js/highfivejs/game/EqTriangleViewHelper.js"></script>
+<script src="js/highfivejs/game/HexViewHelper.js"></script>
 <script src="js/highfivejs/utils/calcCantorPairing.js"></script>
 <script src="js/highfivejs/utils/checkAndSet30fps.js"></script>
 <script src="js/highfivejs/utils/ValueChecker.js"></script>
