grid view helper for fixed resolutions like low rez rendering #core (cherry picked from commit cb96ba6)

--- a/www/index.html
+++ b/www/index.html
@@ -162,6 +162,7 @@
 <script src="js/highfivejs/game/Grid.js"></script>
 <script src="js/highfivejs/game/GridHelper.js"></script>
 <script src="js/highfivejs/game/GridViewHelper.js"></script>
+<script src="js/highfivejs/game/FixRezGridViewHelper.js"></script>
 <script src="js/highfivejs/game/EqTriangleGrid.js"></script>
 <script src="js/highfivejs/game/EqTriangleGridHelper.js"></script>
 <script src="js/highfivejs/game/EqTriangleViewHelper.js"></script>
