screen shaker for low rez stuff #core (cherry picked from commit 35c1f1b)

--- a/www/index.html
+++ b/www/index.html
@@ -58,6 +58,7 @@
 <script src="js/highfivejs/render/intern/draw/entity/RectangleMask.js"></script>
 
 <script src="js/highfivejs/scene/component/ScreenShaker.js"></script>
+<script src="js/highfivejs/scene/component/FixRezScreenShaker.js"></script>
 
 <script src="js/highfivejs/platform/UniversalTranslator.js"></script>
 <script src="js/highfivejs/platform/addFontToDOM.js"></script>
