h5.js promise impl #core (cherry picked from commit 118cc89)

--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
 
 <script src="js/highfivejs/installNamespace.js"></script>
 
+<script src="js/highfivejs/utils/Promise.js"></script>
 <script src="js/highfivejs/utils/iterateEntries.js"></script>
 <script src="js/highfivejs/utils/iterateSomeEntries.js"></script>
 <script src="js/highfivejs/utils/concatenateProperties.js"></script>
