introduce camera to H5.js #core
(cherry picked from commit 3a01817)

--- a/www/index.html
+++ b/www/index.html
@@ -169,6 +169,8 @@
 <script src="js/highfivejs/game/EqTriangleGridHelper.js"></script>
 <script src="js/highfivejs/game/EqTriangleViewHelper.js"></script>
 <script src="js/highfivejs/game/HexViewHelper.js"></script>
+<script src="js/highfivejs/game/Camera.js"></script>
+
 <script src="js/highfivejs/utils/calcCantorPairing.js"></script>
 <script src="js/highfivejs/utils/checkAndSet30fps.js"></script>
 <script src="js/highfivejs/utils/ValueChecker.js"></script>
