move game namespace to H5.js #core
(cherry picked from commit ce046c6)

--- a/www/index.html
+++ b/www/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
 
-<script src="js/mygame/core/installNamespace.js"></script>
+<script src="js/lib/howler.js"></script>
 
 <script src="js/highfivejs/installNamespace.js"></script>
+<script src="js/highfivejs/game/installGameNamespace.js"></script>
 
 <script src="js/highfivejs/utils/Promise.js"></script>
 <script src="js/highfivejs/utils/iterateEntries.js"></script>
