atlas path resolver added to H5 #core
(cherry picked from commit 5280492)

--- a/www/index.html
+++ b/www/index.html
@@ -185,6 +185,7 @@
 <script src="js/highfivejs/app/bootstrap/installLoop.js"></script>
 <script src="js/highfivejs/render/bootstrap/StageFactory.js"></script>
 <script src="js/highfivejs/render/bootstrap/AtlasResourceHelper.js"></script>
+<script src="js/highfivejs/render/bootstrap/createAtlasPaths.js"></script>
 <script src="js/highfivejs/render/bootstrap/ImageResourceHelper.js"></script>
 
 <script src="js/highfivejs/screen/ResizeHandler.js"></script>
