add methods to h5 audio api #core
(cherry picked from commit 5901908)

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
 <script src="js/highfivejs/screen/getDevicePixelRatio.js"></script>
 <script src="js/highfivejs/app/Event.js"></script>
 
+<script src="js/highfivejs/audio/HtmlAudioManager.js"></script>
 <script src="js/highfivejs/audio/SoundFilesManager.js"></script>
 <script src="js/highfivejs/audio/SoundSpriteManager.js"></script>
 
