create factory helper method for html audio manager + loading files -> bootstrapper #core
(cherry picked from commit cdd1b85)

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
 <script src="js/highfivejs/audio/HtmlAudioManager.js"></script>
 <script src="js/highfivejs/audio/SoundFilesManager.js"></script>
 <script src="js/highfivejs/audio/SoundSpriteManager.js"></script>
+<script src="js/highfivejs/audio/bootstrap/SoundResources.js"></script>
 
 <script src="js/highfivejs/render/intern/motion/entity/LinePath.js"></script>
 <script src="js/highfivejs/render/intern/motion/entity/CirclePath.js"></script>
