add skeleton class for the resources #core
(cherry picked from commit 67fa3cd)

--- a/www/index.html
+++ b/www/index.html
@@ -202,8 +202,8 @@
 
 <!--my scenes start-->
 
+<script src="js/mygame/core/MyGameResources.js"></script>
 <script src="js/mygame/scenes/installMyScenes.js"></script>
-
 <script src="js/main.js"></script>
 <!--my scenes end-->
 
