introduces selection list - a custom ui component to select and deselect items like an accordion #core
(cherry picked from commit 82c3b09)

--- a/www/index.html
+++ b/www/index.html
@@ -153,6 +153,7 @@
 <script src="js/highfivejs/screen/Orientation.js"></script>
 <script src="js/highfivejs/utils/range.js"></script>
 <script src="js/highfivejs/scene/component/ButtonFactory.js"></script>
+<script src="js/highfivejs/scene/component/SelectionList.js"></script>
 <script src="js/highfivejs/scene/MVVMScene.js"></script>
 <script src="js/highfivejs/scene/Scenes.js"></script>
 
