add api method to animate audio volume #core
(cherry picked from commit 631802f)

--- a/www/index.html
+++ b/www/index.html
@@ -116,6 +116,7 @@
 <script src="js/highfivejs/render/intern/animation/AnimationHelper.js"></script>
 <script src="js/highfivejs/render/intern/animation/AnimationTimer.js"></script>
 <script src="js/highfivejs/render/intern/animation/PropertyAnimations.js"></script>
+<script src="js/highfivejs/render/intern/audio/AudioAnimations.js"></script>
 <script src="js/highfivejs/render/intern/sprite/SpriteAnimations.js"></script>
 <script src="js/highfivejs/render/intern/sprite/SpriteTimer.js"></script>
 <script src="js/highfivejs/utils/inheritMethods.js"></script>
