--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
 <script src="js/highfivejs/app/Event.js"></script>
 
 <script src="js/highfivejs/audio/HtmlAudioManager.js"></script>
+<script src="js/highfivejs/audio/HtmlAudioSprite.js"></script>
 <script src="js/highfivejs/audio/SoundFilesManager.js"></script>
 <script src="js/highfivejs/audio/SoundSpriteManager.js"></script>
 <script src="js/highfivejs/audio/bootstrap/SoundResources.js"></script>
