--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
 <script src="js/highfivejs/audio/SoundFilesManager.js"></script>
 <script src="js/highfivejs/audio/SoundSpriteManager.js"></script>
 <script src="js/highfivejs/audio/bootstrap/SoundResources.js"></script>
+<script src="js/highfivejs/audio/bootstrap/installAudioSprite.js"></script>
 
 <script src="js/highfivejs/render/intern/motion/entity/LinePath.js"></script>
 <script src="js/highfivejs/render/intern/motion/entity/CirclePath.js"></script>
