ejecta text rendering #core
(cherry picked from commit b93f605)

--- a/www/index.html
+++ b/www/index.html
@@ -131,6 +131,7 @@
 <script src="js/highfivejs/render/intern/draw/renderImage.js"></script>
 <script src="js/highfivejs/render/intern/draw/renderAtlas.js"></script>
 <script src="js/highfivejs/render/intern/draw/renderText.js"></script>
+<script src="js/highfivejs/render/intern/draw/renderEjectaText.js"></script>
 <script src="js/highfivejs/render/intern/draw/renderCircle.js"></script>
 <script src="js/highfivejs/render/intern/draw/renderCurve.js"></script>
 <script src="js/highfivejs/render/intern/draw/renderHexagon.js"></script>
@@ -211,7 +212,7 @@
 
 <script src="js/mygame/core/MyGameResources.js"></script>
 <script src="js/mygame/scenes/runMyScenes.js"></script>
-<script src="js/main.js"></script>
+<script src="js/main-atv.js"></script>
 <!--my scenes end-->
 
 </body>
