src code comments #core
(cherry picked from commit 3a591a6)

--- a/www/index.html
+++ b/www/index.html
@@ -212,7 +212,10 @@
 
 <script src="js/mygame/core/MyGameResources.js"></script>
 <script src="js/mygame/scenes/runMyScenes.js"></script>
+
+<!--main: app entry point & platform config-->
 <script src="js/main-atv.js"></script>
+
 <!--my scenes end-->
 
 </body>
