--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
 <script src="js/highfivejs/utils/checkAndSet30fps.js"></script>
 <script src="js/highfivejs/utils/ValueChecker.js"></script>
 <script src="js/highfivejs/platform/Stats.js"></script>
+<script src="js/highfivejs/platform/getGamepads.js"></script>
 <script src="js/highfivejs/screen/getDevicePixelRatio.js"></script>
 <script src="js/highfivejs/app/Event.js"></script>
 
