undo src ref mistake #core
(cherry picked from commit d002724)

--- a/www/index.html
+++ b/www/index.html
@@ -213,7 +213,7 @@
 <script src="js/mygame/scenes/runMyScenes.js"></script>
 
 <!--main: app entry point & platform config-->
-<script src="js/main-atv.js"></script>
+<script src="js/main.js"></script>
 
 <!--my scenes end-->
 
