introducing wheel events #core
(cherry picked from commit ebfb2b8)

--- a/www/index.html
+++ b/www/index.html
@@ -82,6 +82,7 @@
 <script src="js/highfivejs/input/entity/Key.js"></script>
 <script src="js/highfivejs/input/entity/WiiUGamePad.js"></script>
 <script src="js/highfivejs/input/KeyHandler.js"></script>
+<script src="js/highfivejs/input/WheelHandler.js"></script>
 <script src="js/highfivejs/input/GamePadHandler.js"></script>
 <script src="js/highfivejs/input/PointerHandler.js"></script>
 <script src="js/highfivejs/input/Taps.js"></script>
@@ -202,6 +203,7 @@
 <script src="js/highfivejs/screen/bootstrap/installFullScreen.js"></script>
 <script src="js/highfivejs/input/bootstrap/installPointer.js"></script>
 <script src="js/highfivejs/input/bootstrap/installKeyBoard.js"></script>
+<script src="js/highfivejs/input/bootstrap/installWheel.js"></script>
 <script src="js/highfivejs/input/bootstrap/installGamePad.js"></script>
 <script src="js/highfivejs/app/EventBus.js"></script>
 <script src="js/highfivejs/app/App.js"></script>
